--- a/moneyclub/templates/moneyclub/confirmed.html
+++ b/moneyclub/templates/moneyclub/confirmed.html
@@ -1,14 +1,13 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>MoneyClub -- Confirmation needed</title>
-</head>
+{% extends "moneyclub/non_login_template.html" %}
 
-<body>
-<p>
-Thank you for confirming your email address.
-Please <a href="{% url 'login' %}">login</a> to access your address book.
-</p>
-</body>
-</html>
+
+	{% block contentsblock %}
+		<div class="container">
+			<p>
+				Thank you for confirming your email address.
+				Please <a href="{% url 'login' %}">login</a> to access your address book.
+				</p>
+		</div>
+    
+    {% endblock contentsblock %}
+
