--- a/moneyclub/templates/moneyclub/reset-password-needs-confirmation.html
+++ b/moneyclub/templates/moneyclub/reset-password-needs-confirmation.html
@@ -1,16 +1,18 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Reset Password -- Confirmation needed</title>
-</head>
+{% extends "moneyclub/login_template.html" %}
 
-<body>
-<p>
-A confirmation email has been sent to {{email}}.  Please click the link
+
+	{% block contentsblock %}
+		<div class="container">
+			<p>
+				A confirmation email has been sent to {{email}}.  Please click the link
 in that email to confirm your email address and complete your process of resetting
 the password using the given password.
 </p>
-</body>
-</html>
+		</div>
+    
+    {% endblock contentsblock %}
+
+
+
+
 
