--- a/moneyclub/templates/moneyclub/needs-confirmation.html
+++ b/moneyclub/templates/moneyclub/needs-confirmation.html
@@ -2,7 +2,7 @@
 
 
 	{% block contentsblock %}
-		<div class="container">
+		<div class="container  message">
 			<p>
 				A confirmation email has been sent to {{email}}.  You can find it on your termianl. Please click the link
 in that email to confirm your email address and complete your registation for
