--- a/moneyclub/templates/moneyclub/retrieve_password.html
+++ b/moneyclub/templates/moneyclub/retrieve_password.html
@@ -1,8 +1,8 @@
-{% extends "moneyclub/login_template.html" %}
+{% extends "moneyclub/non_login_template.html" %}
 	
     {% block headblock %}
 	{% block title %}
-    	<title>Reset Password</title>
+    	<title>Retrieve Password</title>
     {% endblock title %}
 
     <!-- Bootstrap core CSS -->
@@ -11,11 +11,12 @@
     <!-- Custom styles for this template -->
     <link href="/static/css/signin.css" rel="stylesheet">
   {% endblock headblock %}
-
+    {% block signin %}
+    {% endblock signin %}
     {% block contentsblock %}
         <div class="container">
 
-              <form class="form-signin" method="post" name="reset" action="/moneyclub/member/reset-password">
+              <form class="form-signin" method="post" id="retrieve" name="retrieve" action="/moneyclub/member/retrieve-password">
                 <h3 class="form-signin-heading">Reset Password</h3>
                 
                 {% for field in form.visible_fields %}
@@ -25,12 +26,11 @@
                      
                 {% endfor %}
                 
-                  <a href = '/moneyclub/member/reset-password-by-email'>
-                    Fogot password? Reset by email validation
-                  </a>
+                 
                 
                       <input class="btn btn-primary btn-block"
-                        type="submit" value="Save">
+                        type="submit" name="retrieve" value="Retrieve Password">
+                      <input type = "hidden" value = "retrieve">
                
                 {% for field in form.hidden_fields %}
                   {{field}}
