--- a/moneyclub/templates/moneyclub/retrieve_password_waits_confirmation.html
+++ b/moneyclub/templates/moneyclub/retrieve_password_waits_confirmation.html
@@ -2,10 +2,10 @@
 
 
 	{% block contentsblock %}
-		<div class="container message">
+		<div class="container  message">
 			<p>
 				A confirmation email has been sent to {{email}}.  Please click the link
-in that email to confirm your email address and complete your process of resetting
+in that email to confirm your email address and complete your process of retrieving
 the password using the given password.
 </p>
 		</div>
