--- a/moneyclub/templates/moneyclub/non_login_template.html
+++ b/moneyclub/templates/moneyclub/non_login_template.html
@@ -35,20 +35,28 @@
               </ul>
               {% block signin %}
               <div class="navbar-collapse collapse">
-                <form class="navbar-form navbar-right" method="post" action="{% url 'django.contrib.auth.views.login' %}">
+                <form class="navbar-form navbar-right" method="post" id="signin" name="signin" action="{% url 'django.contrib.auth.views.login' %}">
                   <div class="form-group">
                     <input type="text" name="username" id="id_username" placeholder="Username" class="form-control">
                   </div>
                   <div class="form-group">
                     <input type="password" name="password" id="id_password" placeholder="Password" class="form-control">
                   </div>
-                  <button type="submit" class="btn btn-success">Sign in</button>
+                  <button type="submit" name="signin" class="btn btn-success">Sign in</button>
+                  <div class="span2">
+                  <input type = "hidden" value="signin">
+                  <a href="/moneyclub/member/retrieve-password"> forgot password?
+                  </a>
+                  </div>
                   {% csrf_token %}
+
                   {% if form.errors %}
+                  <div class="span2">
                   <p style="color:red"> Incorrect user name or password.  </p>  
-                  
+                  </div>
                   {% endif %} 
                 </form>
+
                 
               </div><!--/.navbar-collapse -->
               {% endblock signin %}
