--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -82,9 +82,9 @@
     {% endblock contentsblock %}
     {%block footer%}
       <hr/>
-       <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013, Money Club  | CMU | <a href="#">Terms</a></p>
+       <footer id="footer" class="footer">
+        <p class="pull-right"></p>
+        <p>&copy; 2013, Money Club | Web App Dev | CMU </p>
       </footer>
       
       
