--- a/moneyclub/templates/moneyclub/non_login_template.html
+++ b/moneyclub/templates/moneyclub/non_login_template.html
@@ -26,11 +26,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Moneyclub</a>
+              <a class="navbar-brand active" href="/">Moneyclub</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
+                
                 
               </ul>
               {% block signin %}
@@ -77,9 +77,9 @@
 
     {% block footerblock %}
     <hr/>
-    <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013, Money Club  | CMU | <a href="#">Terms</a></p>
+    <footer id="footer" class="footer">
+        
+        <p>&copy; 2013, Money Club  | Web App Dev | CMU </p>
       </footer>
     
     {% endblock footerblock %}
