--- a/moneyclub/templates/moneyclub/welcome.html
+++ b/moneyclub/templates/moneyclub/welcome.html
@@ -36,9 +36,9 @@
           <img src="/static/image/Business_Growth_1.jpg"  alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-large btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>What you can do in MoneyClub?</h1>
+              <p>You can share and gain knowledge about good investment decisions through sharing relevant information with the Money Club like good articles, links to web pages, images, personalized group messages and even group polls. </p>
+              
             </div>
           </div>
         </div>
@@ -46,9 +46,9 @@
           <img src="/static/image/business-discussion.jpg"  alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-large btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>Who will you meet in MoneyClub</h1>
+              <p> You will meet the professions from different industries and get their profound insight of market</p>
+              
             </div>
           </div>
         </div>
@@ -68,22 +68,19 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="../../static/image/business-growth.jpg"  alt="Generic placeholder image" width="140px">
-          <h2>Something Funny happening in MoneyClub</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="/static/image/business-growth.jpg"  alt="Generic placeholder image" width="140px">
+          <h2>MoneyClub is fun</h2>
+          
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="../../static/image/images.jpeg"  alt="Generic placeholder image" width="140px">
-          <h2>Another thing Funny happening in MoneyClub</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="/static/image/images.jpeg"  alt="Generic placeholder image" width="140px">
+          <h2>MoneyClub is insightful</h2>
+          
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="../../static/image/stratege.jpeg" alt="Generic placeholder image" width="140px">
-          <h2>Can there be more things Funny happening in MoneyClub?</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <img class="img-circle" src="/static/image/stratege.jpeg" alt="Generic placeholder image" width="140px">
+          <h2>MoneyClub is professional</h2>
+          
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
