--- a/moneyclub/templates/moneyclub/confirmed.html
+++ b/moneyclub/templates/moneyclub/confirmed.html
@@ -2,7 +2,7 @@
 
 
 	{% block contentsblock %}
-		<div class="container">
+		<div class="container message">
 			<p>
 				Thank you for confirming your email address.
 				Please <a href="{% url 'login' %}">login</a> to access your address book.
