--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -59,6 +59,8 @@
 
                   
                   <li><a href="/moneyclub/groups/club_create">Create a Group</a></li>
+                  <li><a href="/moneyclub/groups/findgroups/">Find Groups</a></li>
+                  <li><a href="/moneyclub/groups/view_invites/">View Group Invitation</a></li>
                   
                 </ul>
               </li>
