--- a/moneyclub/templates/moneyclub/success.html
+++ b/moneyclub/templates/moneyclub/success.html
@@ -27,7 +27,7 @@
        	
         <h2 class="form-signin-heading"><div class="btn btn-block btn-lg btn-success">
         <span class="glyphicon glyphicon-ok"></span> 
-        You request was sent to the Group - <br/>Owner. Please wait for confirmation.
+        You have joined the Group  <br/>
         </div>
         </h2>
         	
